@@ -1,3 +1,8 @@
+2015-03-13  Jiong Wang  <jiong.wang@arm.com>
+
+	* gas/aarch64/tail_padding.s: New testcase.
+	* gas/aarch64/tail_padding.d: New expectation file.
+
 2015-03-10  Andreas Krebbel  <krebbel@linux.vnet.ibm.com>
 
 	* gas/s390/zarch-z13.d: Add more z13 instructions.
